<resources>
    <string name="app_name">Calcolatrice</string>
    <string name="Input">Input1</string>
    <string name="Input2">Input2</string>
    <string name="Output">Risultato</string>
    <string name="Insert_number">Inserire numero</string>
    <string name="Operation1">X</string>
    <string name="Operation2">/</string>
    <string name="Operation3">+</string>
    <string name="Operation4">-</string>
    <string name="Title">Calcolatrice</string>
</resources>
