<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/Operation2"
            android:layout_width="65dp"
            android:layout_height="46dp"
            android:id="@+id/btn2"
            app:layout_constraintStart_toEndOf="@+id/btn1" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btn3"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/result"/>
    <Button
            android:text="@string/Operation4"
            android:layout_width="65dp"
            android:layout_height="46dp"
            android:id="@+id/btn4"
            app:layout_constraintStart_toEndOf="@+id/btn3" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/result"/>
    <Button
            android:text="@string/Operation3"
            android:layout_width="65dp"
            android:layout_height="46dp"
            android:id="@+id/btn3"
            app:layout_constraintStart_toEndOf="@+id/btn2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btn4"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/result"/>
    <TextView
            android:text="@string/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nomeApp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/Operation1"
            android:layout_width="65dp"
            android:layout_height="46dp"
            android:id="@+id/btn1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btn2"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/result"/>
    <TextView
            android:text="@string/Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/nomeApp" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="92dp"/>
    <TextView
            android:text="@string/Input2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/nomeApp"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="84dp"/>
    <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/input1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:hint="@string/Insert_number"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/input2"/>
    <EditText
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/input2"
            android:hint="@string/Insert_number"
            app:layout_constraintStart_toEndOf="@+id/input1"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/result"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="128dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/Output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginStart="36dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/input2"/>
</android.support.constraint.ConstraintLayout>